samples/_failures_safe/1761298001_652441_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43ff6a5e.c: In function ‘calculate_statistics’:
./samples/SAFE/__tmp_43ff6a5e.c:145: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_43ff6a5e.c:144:5: error: expected declaration or statement at end of input
  144 |     if
      |     ^~
